--- a/package.json
+++ b/package.json
@@ -1,8 +1,19 @@
 {
   "name": "portfolio",
   "version": "0.1.0",
-  "private": true,
+  "keywords": [
+    "react",
+    "typescript",
+    "webpack",
+    "docker"
+  ],
+  "author": "Anup Maharjan",
+  "license": "ISC",
   "dependencies": {
+    "@react-spring/three": "^9.7.3",
+    "@react-spring/web": "^9.7.3",
+    "@react-three/drei": "^9.78.2",
+    "@react-three/fiber": "^8.13.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -10,9 +21,16 @@
     "@types/node": "^16.18.38",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
+    "bootstrap": "^5.3.0",
+    "bootstrap-icons": "^1.10.5",
+    "gltf-pipeline": "^4.1.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-spring": "^9.7.2",
+    "react-three": "^0.9.7",
+    "three": "^0.154.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
